k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
spec:
  selector:
    app: python-app
  type: ClusterIP # Use 'NodePort' or 'ClusterIP' if LoadBalancer is not supported by your cluster
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 5000
